fixing errors on mobile view

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -208,7 +208,7 @@
   display: none;
 }
 
-@media (max-width:  827px){
+@media (max-width: 900px){
   #students{
     display: none;
   }
@@ -231,8 +231,8 @@
   }
 
   #cap, #pencil, #calendar, #event{
-    font-size: 350%;
-    margin-top: 10%;
+    font-size: 40px;
+    margin-top: 60px;
   }
 
   #cap{
